--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
     color: #fff;
 
 }
+html{
+    scroll-behavior: smooths;
+}
 header{
     width: 100%;
     height: 100vh;
@@ -312,12 +315,12 @@ form btn2{
     color: #b54769;
 }
 /* --------------------css for small screens----------- */
-nav .fas{
+nav .fa-solid{
     display: none;
 }
 @media only screen and (max-width:600px){
     #header{
-        background-image: url(images/user\ \(1\).png);
+        background-image: url(images/background1.jpg);
     }
     .header-text{
         margin-top: 100%;
@@ -326,7 +329,7 @@ nav .fas{
     .header-text h1{
         font-size: 30px;
     }
-    nav .fas{
+    nav .fa-solid{
         display: block;
         font-size: 25px;
     }
@@ -334,19 +337,43 @@ nav .fas{
         background:#ff004f ;
         position: fixed;
         top:0;
-        right: -200px; 
-        width: 200px;
+        right: -150px; 
+        width: 150px;
         height: 100vh;
         padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
     }
     nav ul li{
         display: block;
         margin: 25px;
     }
-    nav ul .fas{
+    nav ul .fa-solid{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1,.about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px ;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left,.contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 14px;
     }
 }
