--- a/style.css
+++ b/style.css
@@ -96,11 +96,14 @@ nav ul li a:hover::after{
     margin: 20px 0 40px;
 }
 .tab-links{
-    margin-right: 50px;
-    font-size: 18px;
+    margin-right: 40px;
+    font-size: 1.2rem;
     font-weight: 500;
     cursor: pointer;
     position: relative;
+}
+.tab-links.active-link{
+    color: #ff004f;
 }
 .tab-links::after{
     content: '';
@@ -113,7 +116,7 @@ nav ul li a:hover::after{
     transition: 0.5s;
 }
 .tab-links.active-link::after{
-    width: 50%;
+    width: 100%;
 }
 .tab-contents{
     list-style: none;
@@ -121,7 +124,7 @@ nav ul li a:hover::after{
 }
 .tab-contents ul li span{
     color: #b54769;
-    font-size: 14px;
+    font-size: 1.1rem;
 }
 .tab-contents{
     display: none;
@@ -129,6 +132,11 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display: block;
 }
+
+.inner-list{
+    margin-left: 1rem;
+}
+
 /* ---------Services---------- */
 #services{
     padding: 30px 0;
@@ -266,6 +274,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
+    margin-bottom: 30px;
     color: #ababab;
     display: inline-block;
     transition: transform 0.5s;
