--- a/style.css
+++ b/style.css
@@ -193,6 +193,8 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
+    aspect-ratio: 16 / 9; 
+    object-fit: cover;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
